testsuite/tests/module/mod71.stderr

mod71.hs:4:9: error:
    • Found hole: _ :: t1
      Where: ‘t1’ is a rigid type variable bound by
               the inferred type of f :: Num t => (t1 -> t -> t2) -> t2
               at mod71.hs:4:1-11
    • In the first argument of ‘x’, namely ‘_’
      In the expression: x _ 1
      In an equation for ‘f’: f x = x _ 1
    • Relevant bindings include
        x :: t1 -> t -> t2 (bound at mod71.hs:4:3)
        f :: (t1 -> t -> t2) -> t2 (bound at mod71.hs:4:1)
      Valid substitutions include
        undefined :: forall a. GHC.Stack.Types.HasCallStack => a
          (imported from ‘Prelude’ at mod71.hs:3:8
           (and originally defined in ‘GHC.Err’))
